fix: removed dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: #213547;
+  background-color: #ffffff;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,13 +12,11 @@
 
 a {
   font-weight: 500;
-  /* color: #646cff; */
   color: #242424;
   text-decoration: inherit;
   font-weight: 700;
 }
 a:hover {
-  /* color: #535bf2; */
   color: darkturquoise;
 }
 
@@ -44,28 +40,16 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  background-color: #646cff;
   color: #f9f9f9;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: darkturquoise;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
